--- a/myapp/templates/add_sites.html
+++ b/myapp/templates/add_sites.html
@@ -40,11 +40,11 @@
                         </div>
 
                         <!-- Frequency Field -->
-                        <div class="form-group mb-4">
+                        <!-- <div class="form-group mb-4">
                             <label for="{{ form.frequency.id_for_label }}" class="form-label">{{ form.frequency.label }}</label>
                             {{ form.frequency }}
                             <small class="form-text text-muted">{{ form.frequency.help_text }}</small>
-                        </div>
+                        </div> -->
 
                         <!-- Submit Button -->
                         <div class="d-grid">
