updated google login link as primary button

--- a/myapp/templates/account/login.html
+++ b/myapp/templates/account/login.html
@@ -66,8 +66,8 @@
                     
                     {% if SOCIALACCOUNT_ENABLED %}
                       
-                        <div class="text-center my-4">
-                            <a title="Google" href="/accounts/google/login/?process=login">Google</a>
+                        <div class="text-center my-4 d-block">
+                            <a title="Google" class="btn btn-success d-block"  href="/accounts/google/login/?process=login">Google</a>
                         </div>
                     {% endif %}
                     
